traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:9: error: not found: value Y
  Y=getMondeHauteur()
  ^TraversalDiagonal:10: error: not found: value Y
  if(y==0 && x+1<X){setPos(0,y+1)}else if(x+1==X){setPos(y+1,Y-1)}else{setPos(x+1,y-1)}
                                                             ^